--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Challenge JS</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
+    <script src="libraries/p5.accessibility.js"></script>
+    <script src="libraries/quicksettings.js"></script>
+    <script src="libraries/p5.gui.js"></script>
   </head>
 
   <body>
     <script src="js/sketch.js"></script>
     <script src="js/Player.js"></script>
+    <script src="js/Bot.js"></script>
   </body>
 </html>
