--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <script src="js/sketch.js"></script>
     <script src="js/Player.js"></script>
+    <script src="js/Bullet.js"></script>
     <script src="js/Bot.js"></script>
   </body>
 </html>
