add fruits to finish and image for player ( bug )

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <script src="js/Player.js"></script>
     <script src="js/Bot.js"></script>
     <script src="js/Bullet.js"></script>
+    <script src="js/Fruit.js"></script>
   </body>
 </html>
