--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Challenge JS</title>
+    <title>Challenge JS B1</title>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
